--- a/lib/src/components/fo_data_table_component/fo_data_table_component.css
+++ b/lib/src/components/fo_data_table_component/fo_data_table_component.css
@@ -18,7 +18,7 @@ div.row {
     display: inline-block;
     margin: 0;
     font-size: 0.85rem;
-    padding: 0 0.5rem 0.25rem 0.5rem;
+    padding: 0.25rem 0.5rem 0.25rem 0.5rem;
     box-sizing: border-box;
     float: left;
     width: 100%; }
@@ -148,7 +148,7 @@ div.row.expand {
   float: right; }
 
 .hidden {
-  display: none; }
+  display: none !important; }
 
 .margin-bottom-none {
   margin-bottom: 0 !important; }
@@ -519,6 +519,6 @@ table.output {
     opacity: 0.3; }
 
 material-input {
-  width: 100% !important; }
+  width: auto !important; }
 
 /*# sourceMappingURL=fo_data_table_component.css.map */
