--- a/lib/src/components/fo_select_component/fo_select_component.html
+++ b/lib/src/components/fo_select_component/fo_select_component.html
@@ -10,7 +10,7 @@
             class="clickable color-alert"
             icon="cancel"
             size="medium"
-            (click)="clearSelection()">
+            (click)="clearSelection(); $event.stopPropagation();">
     </material-icon>
 </label>
 <material-dropdown-select
