--- a/lib/src/components/fo_modal_component/fo_modal_component.html
+++ b/lib/src/components/fo_modal_component/fo_modal_component.html
@@ -4,7 +4,7 @@
             [class.fixed-height]="fixedHeight"
             [class.fixed-width]="fixedWidth"
             [error]="error | phrase">
-        <div class="header" header>
+        <div class="header" header [style.background-color]="headerBackgroundColor">
             <h3>
                 {{title | phrase}}
                 <material-button
