--- a/lib/src/components/fo_multi_select_component/fo_multi_select_component.html
+++ b/lib/src/components/fo_multi_select_component/fo_multi_select_component.html
@@ -1,4 +1,5 @@
 <material-dropdown-select
+        [disabled]="disabled || options == null || selectionModel == null"
         [buttonText]="label | phrase"
         [popupMatchInputWidth]="false"
         [options]="options"
