--- a/lib/src/components/fo_file_upload_component/fo_file_upload_component.html
+++ b/lib/src/components/fo_file_upload_component/fo_file_upload_component.html
@@ -1,8 +1,12 @@
 <label>{{label | phrase}}</label>
 <div class="container" (dragenter)="$event.preventDefault()" (dragover)="$event.preventDefault()" (drop)="onDrop($event)">
     <input #input type="file" (change)="onFileChange($event)" accept="image/*,.pdf" />
-    <material-button raised (trigger)="input.click()"><material-icon icon="folder_open"></material-icon></material-button>
-    <material-button raised [disabled]="disabled || !valid" (trigger)="upload()"><material-icon icon="file_upload"></material-icon></material-button>
+    <p class="margin-top-small margin-bottom-small">
+        <material-button raised (trigger)="input.click()"><material-icon icon="folder_open"></material-icon></material-button>
+    </p>
+    <p class="margin-top-small margin-bottom-small">
+        <material-button raised [disabled]="disabled || !valid" (trigger)="upload()"><material-icon icon="file_upload"></material-icon></material-button>
+    </p>
     <p>
         <span *ngIf="file == null">...</span>
         <span *ngIf="file != null">{{file.name}} ({{(file.size / 1024).round()}}kb)</span>
