--- a/lib/src/components/fo_time_picker_component/fo_time_picker_component.scss
+++ b/lib/src/components/fo_time_picker_component/fo_time_picker_component.scss
@@ -1,4 +1,5 @@
 @import '../../../../../../Visurus/Grid/v1/theme';
+@import '../../../../../../Visurus/Grid/v1/colors';
 
 p.label
 {
@@ -66,7 +67,7 @@ div#canvas
 
   h1.output
   {
-    color: $color2;
+    color: $color1;
     cursor: pointer;
     font-size: 1.5rem;
     text-align: center;
