--- a/lib/src/components/fo_select_component/fo_select_component.scss
+++ b/lib/src/components/fo_select_component/fo_select_component.scss
@@ -19,7 +19,7 @@
     vertical-align: text-top;
   }
 
-  /deep/ material-dropdown-select.full-width
+  ::ng-deep material-dropdown-select.full-width
   {
     width: 100%;
   }
