--- a/lib/src/components/fo_select_component/fo_select_component.css
+++ b/lib/src/components/fo_select_component/fo_select_component.css
@@ -1,182 +1,2 @@
-/* TODO: update these variables with the of your app colors and font */
-.border-radius {
-  -webkit-border-radius: 0.5rem;
-  -moz-border-radius: 0.5rem;
-  border-radius: 0.5rem; }
-
-.box-shadow {
-  -webkit-box-shadow: 1px 1px 4px #555;
-  -moz-box-shadow: 1px 1px 4px #555;
-  box-shadow: 1px 1px 4px #555; }
-
-.background-color-1 {
-  background-color: #1b9aaa !important; }
-
-.background-color-2 {
-  background-color: #f5f5f5 !important; }
-
-.background-color-3 {
-  background-color: #ccc !important; }
-
-.background-color-1-x-dark {
-  background-color: black !important; }
-
-.background-color-2-x-dark {
-  background-color: #8f8f8f !important; }
-
-.background-color-3-x-dark {
-  background-color: #666666 !important; }
-
-.background-color-1-dark {
-  background-color: #0d4a52 !important; }
-
-.background-color-2-dark {
-  background-color: #c2c2c2 !important; }
-
-.background-color-3-dark {
-  background-color: #999999 !important; }
-
-.background-color-1-bright {
-  background-color: #49d1e2 !important; }
-
-.background-color-2-bright {
-  background-color: white !important; }
-
-.background-color-3-bright {
-  background-color: white !important; }
-
-.background-color-1-x-bright {
-  background-color: #a1e7f0 !important; }
-
-.background-color-2-x-bright {
-  background-color: white !important; }
-
-.background-color-3-x-bright {
-  background-color: white !important; }
-
-.background-color-alert {
-  background-color: #e33 !important; }
-
-.background-color-alert-bright {
-  background-color: #f69191 !important; }
-
-.background-color-black {
-  background-color: #555 !important; }
-
-.background-color-white {
-  background-color: #fff !important; }
-
-.color-1 {
-  color: #1b9aaa !important; }
-
-.color-2 {
-  color: #f5f5f5 !important; }
-
-.color-3 {
-  color: #ccc !important; }
-
-.color-1-x-dark {
-  color: black !important; }
-
-.color-2-x-dark {
-  color: #8f8f8f !important; }
-
-.color-3-x-dark {
-  color: #666666 !important; }
-
-.color-1-dark {
-  color: #0d4a52 !important; }
-
-.color-2-dark {
-  color: #c2c2c2 !important; }
-
-.color-3-dark {
-  color: #999999 !important; }
-
-.color-1-bright {
-  color: #49d1e2 !important; }
-
-.color-2-bright {
-  color: white !important; }
-
-.color-3-bright {
-  color: white !important; }
-
-.color-1-x-bright {
-  color: #a1e7f0 !important; }
-
-.color-2-x-bright {
-  color: white !important; }
-
-.color-3-x-bright {
-  color: white !important; }
-
-.color-alert {
-  color: #e33 !important; }
-
-.color-alert-bright {
-  color: #f69191 !important; }
-
-.color-black {
-  color: #555 !important; }
-
-.color-white {
-  color: #fff !important; }
-
-html {
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif; }
-
-hr {
-  border: 1px solid #f5f5f5; }
-
-material-checkbox div.icon-container glyph.icon.filled {
-  color: #1b9aaa; }
-
-material-radio div.icon-container.checked {
-  color: #1b9aaa !important; }
-
-material-tab-strip div.navi-bar div.tab-indicator {
-  background-color: #1b9aaa; }
-material-tab-strip tab-button.active {
-  color: #1b9aaa !important; }
-
-.material-toggle.checked div.tgl-container div.tgl-bar {
-  background-color: #3e3 !important; }
-.material-toggle.checked div.tgl-container div.tgl-btn-container div.tgl-btn {
-  background-color: #3e3 !important; }
-
-material-input span.label-text.focused {
-  color: #1b9aaa !important; }
-material-input span.label-text.invalid {
-  color: #e33 !important; }
-material-input div.focused-underline {
-  background-color: #1b9aaa !important; }
-material-input div.focused-underline.invalid {
-  background-color: #e33 !important; }
-material-input div.unfocused-underline.invalid {
-  background-color: #e33 !important; }
-material-input div.error-text {
-  color: #e33 !important; }
-
-material-spinner {
-  border-color: #1b9aaa !important; }
-
-material-tab div.tab-content:first-child {
-  display: block;
-  width: 100%; }
-
-:host {
-  margin-bottom: 1rem;
-  display: block; }
-  :host label {
-    width: 100%;
-    margin-bottom: 0.5rem;
-    display: inline-block;
-    font-size: 0.75em;
-    color: #888; }
-  :host material-icon {
-    vertical-align: text-top; }
-  :host /deep/ material-dropdown-select.full-width {
-    width: 100%; }
-
+.border-radius{-webkit-border-radius:0.5rem;-moz-border-radius:0.5rem;border-radius:0.5rem}.box-shadow{-webkit-box-shadow:1px 1px 4px #555;-moz-box-shadow:1px 1px 4px #555;box-shadow:1px 1px 4px #555}.background-color-1{background-color:#1b9aaa !important}.background-color-2{background-color:#f5f5f5 !important}.background-color-3{background-color:#ccc !important}.background-color-1-x-dark{background-color:#000 !important}.background-color-2-x-dark{background-color:#8f8f8f !important}.background-color-3-x-dark{background-color:#666 !important}.background-color-1-dark{background-color:#0d4a52 !important}.background-color-2-dark{background-color:#c2c2c2 !important}.background-color-3-dark{background-color:#999 !important}.background-color-1-bright{background-color:#49d1e2 !important}.background-color-2-bright{background-color:#fff !important}.background-color-3-bright{background-color:#fff !important}.background-color-1-x-bright{background-color:#a1e7f0 !important}.background-color-2-x-bright{background-color:#fff !important}.background-color-3-x-bright{background-color:#fff !important}.background-color-alert{background-color:#e33 !important}.background-color-alert-bright{background-color:#f69191 !important}.background-color-black{background-color:#555 !important}.background-color-white{background-color:#fff !important}.color-1{color:#1b9aaa !important}.color-2{color:#f5f5f5 !important}.color-3{color:#ccc !important}.color-1-x-dark{color:#000 !important}.color-2-x-dark{color:#8f8f8f !important}.color-3-x-dark{color:#666 !important}.color-1-dark{color:#0d4a52 !important}.color-2-dark{color:#c2c2c2 !important}.color-3-dark{color:#999 !important}.color-1-bright{color:#49d1e2 !important}.color-2-bright{color:#fff !important}.color-3-bright{color:#fff !important}.color-1-x-bright{color:#a1e7f0 !important}.color-2-x-bright{color:#fff !important}.color-3-x-bright{color:#fff !important}.color-alert{color:#e33 !important}.color-alert-bright{color:#f69191 !important}.color-black{color:#555 !important}.color-white{color:#fff !important}html{font-family:Arial,"Helvetica Neue",Helvetica,sans-serif}hr{border:1px solid #f5f5f5}material-checkbox div.icon-container glyph.icon.filled{color:#1b9aaa}material-radio div.icon-container.checked{color:#1b9aaa !important}material-tab-strip div.navi-bar div.tab-indicator{background-color:#1b9aaa}material-tab-strip tab-button.active{color:#1b9aaa !important}.material-toggle.checked div.tgl-container div.tgl-bar{background-color:#3e3 !important}.material-toggle.checked div.tgl-container div.tgl-btn-container div.tgl-btn{background-color:#3e3 !important}material-input span.label-text.focused{color:#1b9aaa !important}material-input span.label-text.invalid{color:#e33 !important}material-input div.focused-underline{background-color:#1b9aaa !important}material-input div.focused-underline.invalid{background-color:#e33 !important}material-input div.unfocused-underline.invalid{background-color:#e33 !important}material-input div.error-text{color:#e33 !important}material-spinner{border-color:#1b9aaa !important}material-tab div.tab-content:first-child{display:block;width:100%}material-yes-no-buttons.action-buttons{color:#1b9aaa !important}:host{margin-bottom:1rem;display:block}:host label{width:100%;margin-bottom:0.5rem;display:inline-block;font-size:0.75em;color:#888}:host material-icon{vertical-align:text-top}:host ::ng-deep material-dropdown-select.full-width{width:100%}
 /*# sourceMappingURL=fo_select_component.css.map */
