--- a/lib/src/components/fo_sidebar_component/fo_sidebar_component.scss
+++ b/lib/src/components/fo_sidebar_component/fo_sidebar_component.scss
@@ -1,3 +1,4 @@
+@import '../../../../../Grid/v1/colors';
 @import '../../../../../Grid/v1/theme';
 @import '../../../../../Grid/v1/grid';
 
@@ -147,7 +148,9 @@
             min-width: 315px;
             #page-header
             {
-              margin: 0 0 1rem 0;
+              margin: 1rem;
+              border-bottom: 2px solid $colorBlack;
+
               //padding: 0.5rem 1rem;
               //color: white;
               material-icon
