--- a/lib/src/components/fo_modal_component/fo_modal_component.html
+++ b/lib/src/components/fo_modal_component/fo_modal_component.html
@@ -18,7 +18,7 @@
                 </material-button>
             </h3>
         </div>
-        <div class="content" *ngIf="visible">
+        <div class="modal-content" *ngIf="visible">
             <ng-content></ng-content>
         </div>
     </material-dialog>
