--- a/lib/src/components/fo_multi_select_component/fo_multi_select_component.scss
+++ b/lib/src/components/fo_multi_select_component/fo_multi_select_component.scss
@@ -1,6 +1,11 @@
-div.selected-values
+.selected-values
 {
   font-size: 0.9em;
   color: #888;
   margin: 0.2rem 0 0.912rem 0;
+}
+
+::ng-deep material-dropdown-select.full-width
+{
+  width: 100%;
 }
